--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
@@ -34,9 +35,14 @@
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
+    
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
+    
+  },
+  "browser": {
+    "http": false
   },
   "private": true
 }
