--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-native": "^4.0.1",
     "expo": "~46.0.8",
     "expo-image-picker": "~13.3.1",
     "expo-permissions": "^13.2.0",
@@ -35,11 +37,10 @@
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
-    
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
-    
+    "@babel/core": "^7.19.0",
+    "@babel/runtime": "^7.19.0"
   },
   "browser": {
     "http": false
